--- a/views/student.html
+++ b/views/student.html
@@ -9,9 +9,6 @@
     <title>北京市广渠门中学志愿活动管理</title>
     <!-- Bootstrap -->
     <link href="/css/semantic.min.css" rel="stylesheet">
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/vue.js"></script>
-    <script src="/js/axios.min.js"></script>
 </head>
 
 <body>
@@ -21,7 +18,7 @@
         </div>
         <a class="item" href="/end">北京市广渠门中心志愿活动管理</a>
         <div class="right menu" style="padding-right: 20px">
-            <a class="item" href="/main">修改密码</a>
+            <a class="item" onclick="changemodal()">修改密码</a>
             <a class="item" href="/exit">退出登录</a>
         </div>
     </div>
@@ -70,7 +67,7 @@
                     <th>报名状态</th>
                 </thead>
                 <tbody>
-                    <tr v-if="canjia.length===">
+                    <tr v-if="canjia.length===0">
                         <td>您还没有参加活动！！！
                             <td></td>
                             <tr v-else v-for="(can,index) in canjia">
@@ -86,6 +83,41 @@
         <activity message="年级"></activity>
         <activity message="班级"></activity>
     </div>
+    <div class="ui modal" id="change">
+        <i class="close icon"></i>
+        <div class="header">
+            修改密码
+        </div>
+        <div class="ui form content">
+            <div v-show="message!==''" class="ui ignore info message">
+                <strong>warning!</strong> {{message}}
+            </div>
+            <div class="inline field">
+                <label>原密码</label>
+                <input type="text" v-model="password">
+            </div>
+            <div class="inline field">
+                <label>新密码</label>
+                <input type="text" v-model="newpassword">
+            </div>
+            <div class="inline field">
+                <label>重复密码</label>
+                <input type="text" v-model="repeatpassword">
+            </div>
+        </div>
+        <div class="actions">
+            <div class="ui black deny button">
+                关闭
+            </div>
+            <div class="ui positive right labeled icon button">
+                确定
+                <i class="checkmark icon"></i>
+            </div>
+        </div>
+    </div>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/vue.js"></script>
+    <script src="/js/axios.min.js"></script>
     <script src="/js/semantic.min.js"></script>
     <script type="text/javascript">
     let rooturl = '/main/root';
@@ -108,7 +140,7 @@
         },
         data: function() {
             return {
-                id:'',
+                id: '',
                 activities: [],
                 activity: {},
                 isActive: '',
@@ -125,7 +157,7 @@
                     })
                     .then(response => {
                         this.mess = response.data;
-                        $('#'+this.id).dimmer('show');
+                        $('#' + this.id).dimmer('show');
                         activity.getCanjia();
                     })
                     .catch(error => {
@@ -183,6 +215,7 @@
             <br>
         </div>`
     })
+
     var activity = new Vue({
         el: '#activity',
         mounted: function() {
@@ -208,6 +241,60 @@
         }
     })
 
+    var change = new Vue({
+        el: '#change',
+        data: function() {
+            return {
+                password: '',
+                newpassword: '',
+                repeatpassword: '',
+                message: '',
+            }
+        },
+        methods: {
+            change: function() {
+                if (this.password === ''){
+                    this.message = "请输入原密码！"
+                }
+                else if (this.newpassword.length < 6 ){
+                    this.message = '请输入6位以上的密码！'
+                }
+                else if (this.newpassword !== this.repeatpassword) {
+                    this.message = '两次输入密码不正确！';
+                    return;
+                } 
+                axios.get('/main/change', {
+                        params: {
+                            password: this.password,
+                            newpassword: this.newpassword,
+                        }
+                    })
+                    .then(response => {
+                        if (response.data === "修改成功") {
+                            $('#change').modal("hide");
+                            this.message = ''
+                        } else {
+                            this.message = response.data;
+                        }
+                    })
+                    .catch(error => {
+                        console.log(error)
+                    })
+            }
+        }
+    })
+    </script>
+    <script type="text/javascript">
+    function changemodal() {
+        $('#change').modal({
+                closable: false,
+                onApprove: function() {
+                    change.change();
+                    return false;
+                }
+            })
+            .modal('show')
+    }
     </script>
 </body>
 
