--- a/views/check.html
+++ b/views/check.html
@@ -14,11 +14,11 @@
     <!-- Fixed navbar -->
     <div class="ui violet inverted top fixed menu">
         <div class="item">
-            <img src="/img/logo.png">
+            <img src="/images/logo.png">
         </div>
         <a class="item" href="/check">北京市广渠门中心志愿活动管理</a>
         <div class="right menu" style="padding-right: 20px">
-            <a class="item" class="active" href="/teacher/main">主页</a>
+            <a class="item" class="active" href="/teacher">主页</a>
             <a class="item" href="/exit">退出登录</a>
         </div>
     </div>
@@ -72,6 +72,8 @@
         <script src="/js/vue.js"></script>
         <script src="/js/axios.min.js"></script>
         <script>
+        let classurl = '/message/teacher/getclass';
+        let checkurl = '/message/teacher/score';
         var check = new Vue({
             el: '#check',
             data: function() {
@@ -81,13 +83,11 @@
                     classes: [],
                     students: [],
                     selectClass: '',
-                    classurl: '/teacher/class',
-                    checkurl: '/check/score'
                 }
             },
             methods: {
                 checkClass: function() {
-                    axios.get(this.classurl, {
+                    axios.get(classurl, {
                             params: {
                                 grade: this.selectGrade,
                             }
@@ -104,7 +104,7 @@
                     if (this.selectClass === "全年级"){
                         this.selectClass = "";
                     }
-                    axios.get(this.checkurl, {
+                    axios.get(checkurl, {
                             params: {
                                 grade: this.selectGrade,
                                 class: this.selectClass,
