--- a/views/student.html
+++ b/views/student.html
@@ -16,7 +16,7 @@
         <div class="item">
             <img src="/images/logo.png">
         </div>
-        <a class="item" href="/end">北京市广渠门中心志愿活动管理</a>
+        <a class="item">北京市广渠门中心志愿活动管理</a>
         <div class="right menu" style="padding-right: 20px">
             <a class="item" onclick="changemodal()">修改密码</a>
             <a class="item" href="/exit">退出登录</a>
@@ -83,7 +83,7 @@
         <activity message="年级"></activity>
         <activity message="班级"></activity>
     </div>
-    <div class="ui modal" id="change">
+    <div class="ui small modal" id="change">
         <i class="close icon"></i>
         <div class="header">
             修改密码
@@ -94,15 +94,15 @@
             </div>
             <div class="inline field">
                 <label>原密码</label>
-                <input type="text" v-model="password">
+                <input type="password" v-model="password">
             </div>
             <div class="inline field">
                 <label>新密码</label>
-                <input type="text" v-model="newpassword">
+                <input type="password" v-model="newpassword">
             </div>
             <div class="inline field">
                 <label>重复密码</label>
-                <input type="text" v-model="repeatpassword">
+                <input type="password" v-model="repeatpassword">
             </div>
         </div>
         <div class="actions">
@@ -120,9 +120,12 @@
     <script src="/js/axios.min.js"></script>
     <script src="/js/semantic.min.js"></script>
     <script type="text/javascript">
-    let rooturl = '/main/root';
-    let classurl = '/main/class';
-    let gradeurl = '/main/grade';
+    let rooturl = '/message/student/root';
+    let classurl = '/message/student/class';
+    let gradeurl = '/message/student/grade';
+    let setjionurl = '/message/student/jion';
+    let canjiaurl = '/message/student/canjia';
+    let changerul = '/message/student/change' ;
     Vue.component('activity', {
         props: ['message'],
         mounted: function() {
@@ -150,7 +153,7 @@
         },
         methods: {
             setJion: function() {
-                axios.get("/main/jion", {
+                axios.get(setjionurl, {
                         params: {
                             activity_id: this.activity.Id,
                         }
@@ -225,12 +228,11 @@
         data: function() {
             return {
                 canjia: [],
-                url: '/main/canjia',
             }
         },
         methods: {
             getCanjia: function() {
-                axios.get(this.url)
+                axios.get(canjiaurl)
                     .then(response => {
                         this.canjia = response.data
                     })
@@ -253,17 +255,15 @@
         },
         methods: {
             change: function() {
-                if (this.password === ''){
+                if (this.password === '') {
                     this.message = "请输入原密码！"
-                }
-                else if (this.newpassword.length < 6 ){
+                } else if (this.newpassword.length < 6) {
                     this.message = '请输入6位以上的密码！'
-                }
-                else if (this.newpassword !== this.repeatpassword) {
+                } else if (this.newpassword !== this.repeatpassword) {
                     this.message = '两次输入密码不正确！';
                     return;
-                } 
-                axios.get('/main/change', {
+                }
+                axios.get(changerul, {
                         params: {
                             password: this.password,
                             newpassword: this.newpassword,
