--- a/views/teacher.html
+++ b/views/teacher.html
@@ -5,17 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>北京市广渠门中学志愿活动管理</title>
-    <!-- Bootstrap -->
-    <link href="/css/buttons.css" rel="stylesheet">
     <link href="/css/semantic.min.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
 </head>
 
 <body>
@@ -234,6 +226,15 @@
     <script src="/js/vue.js"></script>
     <script src="/js/axios.min.js"></script>
     <script type="text/javascript">
+    let getaurl='/message/teacher/activities';
+    let geturl= '/message/teacher/activity';
+    let seturl= '/message/teacher/set';
+    let delurl= '/message/teacher/del';
+    let addurl= '/message/teacher/add';
+    let endurl= '/message/teacher/accept';
+    let classurl= '/message/teacher/getclass';
+    let studenturl= '/message/teacher/getstudent';
+    let addstuurl='/message/teacher/addStu';
     var activities = new Vue({
         el: '#activities',
         mounted: function() {
@@ -241,7 +242,7 @@
         },
         methods: {
             getActivities: function() {
-                axios.get(this.url)
+                axios.get(getaurl)
                     .then(response => {
                         this.activitie = response.data;
                         end.activities = this.activitie;
@@ -255,7 +256,7 @@
             },
 
             getActivity: function() {
-                axios.get(this.geturl, {
+                axios.get(geturl, {
                         params: {
                             id: this.activity.Id
                         }
@@ -268,7 +269,7 @@
                     });
             },
             setStatus: function(jionid, status) {
-                axios.get(this.seturl, {
+                axios.get(seturl, {
                         params: {
                             jionid: jionid,
                             status: status,
@@ -283,7 +284,7 @@
                     });
             },
             delActivity: function(activityid) {
-                axios.get(this.delurl, {
+                axios.get(delurl, {
                         params: {
                             id: activityid
                         }
@@ -311,10 +312,6 @@
         },
         data: function() {
             return {
-                url: '/teacher/activities',
-                geturl: '/teacher/activity',
-                seturl: '/teacher/set',
-                delurl: '/teacher/del',
                 activity: {},
                 activitie: [],
                 jions: [],
@@ -330,7 +327,6 @@
             Name: '',
             Introduction: '',
             message: '',
-            url: '/teacher/add',
         },
         methods: {
             addActivities: function() {
@@ -341,7 +337,7 @@
                     this.message = "请输入活动内容！";
                     return
                 }
-                axios.get(this.url, {
+                axios.get(addurl, {
                         params: {
                             Name: this.Name,
                             Introduction: this.Introduction,
@@ -373,7 +369,6 @@
                 impression: '',
                 selected: '',
                 activities: [],
-                url: '/teacher/accept'
             }
         },
         methods: {
@@ -406,7 +401,7 @@
                     this.message = "请输入活动感受！";
                     return
                 }
-                axios.post(this.url, {
+                axios.post(endurl, {
                         img: JSON.stringify(this.images),
                         impression: this.impression,
                         score: this.score,
@@ -441,16 +436,13 @@
                 student: [],
                 selectStudent: '',
                 activities: [],
-                classurl: '/teacher/class',
-                studenturl: '/teacher/student',
-                addurl: '/teacher/addStu',
                 selected: '',
                 message: '',
             }
         },
-        <<<if .teacher.Grade>>>
-        <<<if .teacher.Class>>>
-        mounted: function(){
+        <<<if .teacher.Grade >>>
+        <<<if .teacher.Class >>>
+        mounted: function() {
             this.checkStudent();
         },
         <<< end >>>
@@ -466,7 +458,7 @@
                 this.message = '';
             },
             checkClass: function() {
-                axios.get(this.classurl, {
+                axios.get(classurl, {
                         params: {
                             grade: this.selectGrade,
                         }
@@ -479,7 +471,7 @@
                     })
             },
             checkStudent: function() {
-                axios.get(this.studenturl, {
+                axios.get(studenturl, {
                         params: {
                             grade: this.selectGrade,
                             class: this.selectClass,
@@ -500,7 +492,7 @@
                     this.message = "请选择添加的同学！";
                     return
                 }
-                axios.get(this.addurl, {
+                axios.get(addstuurl, {
                         params: {
                             name: this.selectStudent,
                             activityId: this.selected,
