--- a/views/teacher.html
+++ b/views/teacher.html
@@ -230,21 +230,10 @@
     <br>
     </div>
     </div>
-    <script>
-    function check(date)
-         { 
-        var result = date.match(/((^((1[8-9]\d{2})|([2-9]\d{3}))(-)(10|12|0?[13578])(-)(3[01]|[12][0-9]|0?[1-9])$)|(^((1[8-9]\d{2})|([2-9]\d{3}))(-)(11|0?[469])(-)(30|[12][0-9]|0?[1-9])$)|(^((1[8-9]\d{2})|([2-9]\d{3}))(-)(0?2)(-)(2[0-8]|1[0-9]|0?[1-9])$)|(^([2468][048]00)(-)(0?2)(-)(29)$)|(^([3579][26]00)(-)(0?2)(-)(29)$)|(^([1][89][0][48])(-)(0?2)(-)(29)$)|(^([2-9][0-9][0][48])(-)(0?2)(-)(29)$)|(^([1][89][2468][048])(-)(0?2)(-)(29)$)|(^([2-9][0-9][2468][048])(-)(0?2)(-)(29)$)|(^([1][89][13579][26])(-)(0?2)(-)(29)$)|(^([2-9][0-9][13579][26])(-)(0?2)(-)(29)$))/);
-        if(result==null)
-        {
-            return false;
-        }
-        return true;
-        
-    }
-    </script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/vue.js"></script>
     <script src="/js/axios.min.js"></script>
+    <script src="/js/api.js"></script>
     <script type="text/javascript">
     let getaurl='/message/teacher/activities';
     let geturl= '/message/teacher/activity';
@@ -274,7 +263,7 @@
                             this.getActivity();
                         }
                     }).catch(function(error) {
-                        console.log(error);
+                       checkError(error);
                         
                     });
             },
@@ -291,7 +280,7 @@
                         }
                     })
                     .catch(function(error) {
-                        console.log(error);
+                        checkError(error);
                     });
             },
             setStatus: function(jionid, status) {
@@ -307,7 +296,7 @@
                         }
                     })
                     .catch(function(error) {
-                        console.log(error);
+                        checkError(error);
                     });
             },
             delActivity: function(activityid) {
@@ -323,7 +312,7 @@
                         }
                     })
                     .catch(function(error) {
-                        console.log(error);
+                        checkError(error);
                     });
 
             },
@@ -386,7 +375,7 @@
                         }
                     })
                     .catch(function(error) {
-                        console.log(error);
+                        checkError(error);
                     })
                 $('#add').modal('hide');
                 this.Name = '';
@@ -454,7 +443,7 @@
                         }
                     })
                     .catch(function(error) {
-                        console.log(error);
+                        checkError(error);
                     })
                 $('#end').modal('hide');
                 this.impression = '';
